--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </body>
 
 <script>
-  let randomNumber = Math.floor(Math.random() * 100); 
+  let randomNumber = Math.floor(Math.random() * 100)+1; 
   const ATTEMPS = 10;
   const guesses = document.querySelector('.guesses');
   const lastResult = document.querySelector('.lastResult');
@@ -124,7 +124,7 @@
 
 	  lastResult.style.backgroundColor = 'white';
 
-	  randomNumber =  Math.floor(Math.random() * 100);
+	  randomNumber =  Math.floor(Math.random() * 100)+1;
   }
 </script>
 </html>
